--- a/core/build.gradle
+++ b/core/build.gradle
@@ -6,4 +6,5 @@ eclipse.project {
     name = appName + "-core"
 }
 dependencies {
+//    compile 'com.google.android.gms:play-services-ads:8.4.0'
 }
