--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,8 @@ project(":android") {
         natives "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-armeabi"
         natives "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-armeabi-v7a"
         natives "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-x86"
+
+//        compile 'com.google.android.gms:play-services-ads:8.4.0'
     }
 }
 
@@ -89,12 +91,16 @@ project(":core") {
 
 
     dependencies {
+        compile fileTree(include: ['*.jar'], dir: 'libs')
+//        compile 'com.android.support:appcompat-v7:20.0.0'
+//        compile 'com.android.support:support-v4:20.0.0'
+//        compile 'com.google.android.gms:play-services-ads:8.4.0'
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
-		//compile "com.underwaterapps.overlap2druntime:overlap2d-runtime-libgdx:0.1.1-SNAPSHOT"
-		compile project(":Overlap2dRuntime")
-
         compile "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
+
+        //compile "com.underwaterapps.overlap2druntime:overlap2d-runtime-libgdx:0.1.1-SNAPSHOT"
+        compile project(":Overlap2dRuntime")
     }
 }
 
