--- a/android/build.gradle
+++ b/android/build.gradle
@@ -117,4 +117,9 @@ idea {
 dependencies {
     compile 'com.android.support:support-v4:22.0.0'
     compile 'com.google.android.gms:play-services:7.0.0'
+//    compile fileTree(dir: 'libs', include: ['*.jar'])
+//    compile 'com.android.support:appcompat-v7:23.1.0'
+//    compile 'com.android.support:recyclerview-v7:23.1.0'
+//    compile 'com.android.support:cardview-v7:23.1.0'
+//    compile 'com.google.android.gms:play-services:8.1.0'
 }
