--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -12,6 +12,18 @@
     <!--<uses-permission android:name="android.permission."/>-->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
+    <!--in App payments -->
+    <!--Google Play-->
+    <uses-permission android:name="com.android.vending.BILLING"/>
+    <!--Open Store-->
+    <uses-permission android:name="org.onepf.openiab.permission.BILLING"/>
+    <!--Samsung Apps-->
+    <uses-permission android:name="com.sec.android.iap.permission.BILLING"/>
+    <!--Nokia-->
+    <uses-permission android:name="com.nokia.payment.BILLING"/>
+    <!--SlideME-->
+    <uses-permission android:name="com.slideme.sam.manager.inapp.permission.BILLING"/>
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
