--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,4 @@ build/
 /android/assets/vanity.params
 /android/assets/levels.json
 /android/assets/pets.params
+/android/assets/orig/spriter_animations/flower_idle
