--- a/html/build.gradle
+++ b/html/build.gradle
@@ -7,8 +7,8 @@ gwt {
     minHeapSize="1G"
 
     src = files(file("src/")) // Needs to be in front of "modules" below.
-    modules 'com.mygdx.etf.GdxDefinition'
-    devModules 'com.mygdx.etf.GdxDefinitionSuperdev'
+    modules 'com.mygdx.game.GdxDefinition'
+    devModules 'com.mygdx.game.GdxDefinitionSuperdev'
     project.webAppDirName = 'webapp'
 
     compiler {
