--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -2,9 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mygdx.etf.android"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.0">
 
-    <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="22"/>
+    <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="24"/>
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
@@ -25,15 +25,18 @@
     <uses-permission android:name="com.slideme.sam.manager.inapp.permission.BILLING"/>
 
     <application
+            android:name="android.support.multidex.MultiDexApplication"
         android:allowBackup="true"
         android:largeHeap="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/GdxTheme" >
 
-        <meta-data
-                android:name="com.google.android.gms.version"
-                android:value="@integer/google_play_services_version" />
+        <!--<meta-data android:name="com.google.android.gms.games.APP_ID" android:value="@string/app_id" />-->
+        <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
+        <!--<meta-data-->
+                <!--android:name="com.google.android.gms.version"-->
+                <!--android:value="@integer/google_play_services_version" />-->
 
         <meta-data android:name="com.google.android.gms.games.APP_ID" android:value="@string/app_id" />
 
