--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,13 @@
 android {
 
+    defaultConfig {
+        multiDexEnabled  true
+    }
+
+    dexOptions {
+        javaMaxHeapSize "4g"
+    }
+
     signingConfigs {
         /* TODO(developer): Configure to sign app with a release key for testing.*/
         release {
@@ -10,8 +18,8 @@ android {
         }
     }
 
-    buildToolsVersion '19.1.0'
-    compileSdkVersion 19
+    buildToolsVersion '24.0.1'
+    compileSdkVersion 24
     sourceSets {
         main {
             manifest.srcFile 'AndroidManifest.xml'
@@ -31,13 +39,13 @@ android {
     }
 
     buildTypes {
-        release {
-            minifyEnabled true
-// use minifyEnabled instead of runProguard if your gradle plugin version is 0.14+
-            proguardFile getDefaultProguardFile('proguard-android-optimize.txt')
-            proguardFile 'proguard-project.txt'
-            signingConfig signingConfigs.release
-        }
+//        release {
+//            minifyEnabled true
+//// use minifyEnabled instead of runProguard if your gradle plugin version is 0.14+
+//            proguardFile getDefaultProguardFile('proguard-android-optimize.txt')
+//            proguardFile 'proguard-project.txt'
+//            signingConfig signingConfigs.release
+//        }
     }
 }
 
@@ -146,11 +154,10 @@ idea {
     }
 }
 dependencies {
-    compile 'com.android.support:support-v4:22.0.0'
-    compile 'com.google.android.gms:play-services:7.0.0'
-//    compile fileTree(dir: 'libs', include: ['*.jar'])
-//    compile 'com.android.support:appcompat-v7:23.1.0'
-//    compile 'com.android.support:recyclerview-v7:23.1.0'
-//    compile 'com.android.support:cardview-v7:23.1.0'
-//    compile 'com.google.android.gms:play-services:8.1.0'
+    compile 'com.android.support:support-v4:24.0.0'
+    compile 'com.google.android.gms:play-services:9.4.0'
+    compile 'com.android.support:multidex:1.0.1'
+    //    compile fileTree(dir: 'libs', include: ['*.jar'])
 }
+
+
