--- a/build.gradle
+++ b/build.gradle
@@ -68,8 +68,11 @@ project(":android") {
         natives "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-armeabi-v7a"
         natives "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-x86"
 
-//        compile "com.badlogicgames.gdxpay:gdx-pay-client:0.9.1"
-//        compile 'com.google.android.gms:play-services-ads:8.4.0'
+        compile "com.google.android.gms:play-services-games:9.4.0"
+        compile "com.google.android.gms:play-services-plus:9.4.0"
+        compile "com.badlogicgames.gdxpay:gdx-pay-client:0.9.1"
+        compile 'com.google.android.gms:play-services-ads:9.4.0'
+        compile project(":BaseGameUtils")
     }
 }
 
@@ -98,9 +101,6 @@ project(":core") {
 
     dependencies {
         compile fileTree(include: ['*.jar'], dir: 'libs')
-//        compile 'com.android.support:appcompat-v7:20.0.0'
-//        compile 'com.android.support:support-v4:20.0.0'
-//        compile 'com.google.android.gms:play-services-ads:8.4.0'
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
