--- a/android/build.gradle
+++ b/android/build.gradle
@@ -11,15 +11,16 @@ android {
     signingConfigs {
         /* TODO(developer): Configure to sign app with a release key for testing.*/
         release {
-            storeFile file('android/keystore.jks')
+            storeFile file('/keystore.jks')
             keyAlias 'release_key_alias'
             keyPassword "66236zair!"
             storePassword "66236zair!"
         }
     }
 
-    buildToolsVersion '24.0.1'
-    compileSdkVersion 24
+    buildToolsVersion '23.0.3'
+    compileSdkVersion 23
+//    useLibrary 'org.apache.http.legacy'
     sourceSets {
         main {
             manifest.srcFile 'AndroidManifest.xml'
@@ -39,13 +40,13 @@ android {
     }
 
     buildTypes {
-//        release {
-//            minifyEnabled true
-//// use minifyEnabled instead of runProguard if your gradle plugin version is 0.14+
-//            proguardFile getDefaultProguardFile('proguard-android-optimize.txt')
-//            proguardFile 'proguard-project.txt'
-//            signingConfig signingConfigs.release
-//        }
+        release {
+            minifyEnabled true
+// use minifyEnabled instead of runProguard if your gradle plugin version is 0.14+
+            proguardFile getDefaultProguardFile('proguard-android-optimize.txt')
+            proguardFile 'proguard-project.txt'
+            signingConfig signingConfigs.release
+        }
     }
 }
 
@@ -157,6 +158,7 @@ dependencies {
     compile 'com.android.support:support-v4:24.0.0'
     compile 'com.google.android.gms:play-services:9.4.0'
     compile 'com.android.support:multidex:1.0.1'
+//    classpath 'com.android.tools.build:gradle:1.3.1'
     //    compile fileTree(dir: 'libs', include: ['*.jar'])
 }
 
