--- a/overlap2d-runtime-libgdx-master/gradle/wrapper/gradle-wrapper.properties
+++ b/overlap2d-runtime-libgdx-master/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Fri Oct 23 14:43:15 AMT 2015
+#Thu Sep 22 14:03:09 EEST 2016
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
