* fixing service btns

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,6 @@ build/
 /android/assets/game.sav
 /android/assets/game.sav
 /android/assets/pets.params
+/GameData/Krashe_Overlap2d_prj2/assets/orig/images/uibtnback2.png
+/GameData/Krashe_Overlap2d_prj2/assets/orig/images/uibtnback3.png
+/GameData/Krashe_Overlap2d_prj2/assets/orig/images/uibtnback1.png
