--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,9 @@
 android {
 
+    lintOptions{
+        checkReleaseBuilds false
+    }
+
     signingConfigs {
         /* TODO(developer): Configure to sign app with a release key for testing.*/
         release {
@@ -33,20 +37,20 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled true
+//            minifyEnabled true
 // use minifyEnabled instead of runProguard if your gradle plugin version is 0.14+
-            proguardFile getDefaultProguardFile('proguard-android-optimize.txt')
-            proguardFile 'proguard-project.txt'
+//            proguardFile getDefaultProguardFile('proguard-android-optimize.txt')
+//            proguardFile 'proguard-project.txt'
             signingConfig signingConfigs.release
         }
     }
 }
 
-// needed to add JNI shared libraries to APK when compiling on CLI
-tasks.withType(com.android.build.gradle.tasks.PackageApplication) { pkgTask ->
-    pkgTask.jniFolders = new HashSet<File>()
-    pkgTask.jniFolders.add(new File(projectDir, 'libs'))
-}
+//// needed to add JNI shared libraries to APK when compiling on CLI
+//tasks.withType(com.android.build.gradle.tasks.PackageApplication) { pkgTask ->
+//    pkgTask.jniFolders = new HashSet<File>()
+//    pkgTask.jniFolders.add(new File(projectDir, 'libs'))
+//}
 
 // called every time gradle gets executed, takes the native dependencies of
 // the natives configuration, and extracts them to the proper libs/ folders
@@ -107,8 +111,6 @@ eclipse {
         targetCompatibility = 1.7
     }
 
-
-
     classpath {
         plusConfigurations += [project.configurations.compile]
         containers 'com.android.ide.eclipse.adt.ANDROID_FRAMEWORK', 'com.android.ide.eclipse.adt.LIBRARIES'
@@ -146,10 +148,10 @@ idea {
         }
     }
 }
-dependencies {
-    compile 'com.android.support:support-v4:24.0.0'
-    //    classpath 'com.android.tools.build:gradle:1.3.1'
-    //    compile fileTree(dir: 'libs', include: ['*.jar'])
-}
+//dependencies {
+//    compile 'com.android.support:support-v4:24.0.0'
+//    //    classpath 'com.android.tools.build:gradle:1.3.1'
+//    //    compile fileTree(dir: 'libs', include: ['*.jar'])
+//}
 
 
