--- a/overlap2d-runtime-libgdx-master/build.gradle
+++ b/overlap2d-runtime-libgdx-master/build.gradle
@@ -6,15 +6,15 @@ sourceSets.main.java.srcDirs = [ "src/" ]
 
 ext {
     gdxVersion = '1.9.3'
-    box2dlightsVersion = '1.4'
+//    box2dlightsVersion = '1.4'
     ashleyVersion = '1.6.1-SNAPSHOT'
 }
 
 dependencies {
     compile "com.badlogicgames.gdx:gdx:$gdxVersion"
-    compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
+//    compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
     compile "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
-    compile "com.badlogicgames.box2dlights:box2dlights:$box2dlightsVersion"
+//    compile "com.badlogicgames.box2dlights:box2dlights:$box2dlightsVersion"
     compile "com.badlogicgames.ashley:ashley:$ashleyVersion"
 }
 
