--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,4 @@ build/
 /GameData/Krashe_Overlap2d_prj2/assets/orig/images/uibtnback3.png
 /GameData/Krashe_Overlap2d_prj2/assets/orig/images/uibtnback1.png
 /GameData/game_assets_/gui/shop_item_paper.png
+/android/assets/pets.params
