--- a/BaseGameUtils/build.gradle
+++ b/BaseGameUtils/build.gradle
@@ -20,7 +20,7 @@ dependencies {
 android {
     // Set defaults so that BaseGameUtils can be used outside of BasicSamples
     if (!project.hasProperty('android_compile_version')) {
-        ext.android_compile_version = 26;
+        ext.android_compile_version = 26
     }
     if (!project.hasProperty('android_version')) {
         ext.android_version = '24.0.1'
