--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,6 +1,7 @@
 android {
 
     lintOptions{
+        abortOnError false
         checkReleaseBuilds false
     }
 
@@ -14,7 +15,7 @@ android {
         }
     }
 
-    buildToolsVersion '26.0.1'
+    buildToolsVersion '28.0.0 rc2'
     compileSdkVersion 26
 //    useLibrary 'org.apache.http.legacy'
     sourceSets {
