--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.fd.etf.android" coreApp="true" android:sharedUserId= "android.uid.media"
-    android:versionCode="31"
-    android:versionName="1.0">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
+          package="com.fd.etf.android" coreApp="true" android:sharedUserId="android.uid.media"
+          android:versionCode="36"
+          android:versionName="1.05">
 
     <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="26"/>
 
@@ -29,6 +29,8 @@
         android:largeHeap="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+        android:debuggable="true"
+        tools:ignore="HardcodedDebugMode"
         android:theme="@style/GdxTheme" >
 
         <meta-data android:name="com.google.android.gms.games.APP_ID" android:value="@string/app_id" />
