--- a/android/build.gradle
+++ b/android/build.gradle
@@ -43,6 +43,7 @@ android {
 //            proguardFile getDefaultProguardFile('proguard-android-optimize.txt')
 //            proguardFile 'proguard-project.txt'
             signingConfig signingConfigs.release
+            debuggable true
         }
     }
 }
