--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,6 @@ buildscript {
     repositories {
         mavenCentral()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
-        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven { url "https://oss.sonatype.org/content/repositories/releases/" }
     }
     dependencies {
@@ -19,11 +18,11 @@ allprojects {
     version = '1.1'
     ext {
         appName = 'KRASHE_3'
-        gdxVersion = '' +
-                '1.9.3'
+        gdxVersion = '1.9.3'
         roboVMVersion = '1.2.0'
 //        box2DLightsVersion = '1.3'
         ashleyVersion = '1.4.0'
+        gdxPayVersion = '0.11.2'
         aiVersion = '1.5.0'
     }
 
@@ -54,10 +53,11 @@ project(":android") {
 
     dependencies {
         compile project(":core")
-//        compile "com.google.android.gms:play-services-games:9.4.0"
-//        compile "com.google.android.gms:play-services-plus:9.4.0"
         compile "com.google.android.gms:play-services-ads:11.0.4"
         compile "com.google.android.gms:play-services-gcm:11.0.4"
+        compile "com.badlogicgames.gdxpay:gdx-pay-android:$gdxPayVersion"
+        compile "com.badlogicgames.gdxpay:gdx-pay-android-googleplay:${gdxPayVersion}@aar"
+        compile "com.badlogicgames.gdxpay:gdx-pay:$gdxPayVersion:library"
 
         compile "com.badlogicgames.gdx:gdx-backend-android:$gdxVersion"
         natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi"
@@ -68,11 +68,6 @@ project(":android") {
 //        natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-armeabi"
 //        natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-armeabi-v7a"
 //        natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-x86"
-
-        compile "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
-        natives "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-armeabi"
-        natives "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-armeabi-v7a"
-        natives "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-x86"
 
         compile project(":BaseGameUtils")
     }
@@ -102,8 +97,10 @@ project(":core") {
     dependencies {
         compile fileTree(include: ['*.jar'], dir: 'libs')
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
+        compile "com.badlogicgames.gdxpay:gdx-pay-client:$gdxPayVersion"
 //        compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
+        compile "com.badlogicgames.gdxpay:gdx-pay:$gdxPayVersion:library"
         compile "com.badlogicgames.ashley:ashley:1.7.0"
         compile project(":Overlap2dRuntime")
     }
