--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
           package="com.fd.etf.android" coreApp="true" android:sharedUserId="android.uid.media"
-          android:versionCode="40"
-          android:versionName="1.09">
+          android:versionCode="41"
+          android:versionName="1.10">
 
     <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="26"/>
 
@@ -30,6 +30,8 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/GdxTheme" >
+        <!--android:debuggable="true"-->
+        <!--tools:ignore="HardcodedDebugMode"-->
 
         <meta-data android:name="com.google.android.gms.games.APP_ID" android:value="@string/app_id" />
         <meta-data android:name="com.google.android.gms.version"
