--- a/build.gradle
+++ b/build.gradle
@@ -53,20 +53,14 @@ project(":android") {
     dependencies {
         compile project(":core")
         compile "com.google.android.gms:play-services-ads:11.0.4"
-        compile "com.google.android.gms:play-services-gcm:11.0.4"
+//        compile "com.google.android.gms:play-services-gcm:11.0.4"
         compile "com.badlogicgames.gdxpay:gdx-pay-android:$gdxPayVersion"
         compile "com.badlogicgames.gdxpay:gdx-pay-android-googleplay:${gdxPayVersion}@aar"
-        compile "com.badlogicgames.gdxpay:gdx-pay:$gdxPayVersion:library"
 
         compile "com.badlogicgames.gdx:gdx-backend-android:$gdxVersion"
         natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi"
-        natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi-v7a"
-        natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-x86"
-
-//        compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
-//        natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-armeabi"
-//        natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-armeabi-v7a"
-//        natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-x86"
+//        natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi-v7a"
+//        natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-x86"
 
         compile project(":BaseGameUtils")
     }
@@ -91,7 +85,6 @@ project(":android") {
 
 project(":core") {
     apply plugin: "java"
-
 
     dependencies {
         compile fileTree(include: ['*.jar'], dir: 'libs')
